# RA-D-PS

./: .env.example  .gitignore  .pylintrc  CLAUDE.md  CONTRIBUTING.md  Dockerfile  EXCEL_EXPORT_COMPLETE.md  FOUNDATION_VALIDATION_STATUS.md  GUI2.py  Makefile  PHASE_4_COMPLETE.md  PYLIDC_INSTALLATION_COMPLETE.md  QUICKSTART_SCHEMA_AGNOSTIC.md  RA_D_PS_EXPORT_GUIDE.md  README.md  TEST_INSTRUCTIONS.md  UPDATED_INTEGRATION_SUMMARY.md  XMLPARSE.py  XML_COMP_TEST_RESULTS.md  advanced_queries.py  cli.py  comprehensive_type_test.py  config.json  debug_parser.py  debug_types.py  diagnose_parsing.py  docker-compose.yml  main.py  postdoc.py  pyproject-black.toml  pyproject.toml  ra_d_ps.py  requirements.txt  setup.cfg  supabase  test_complete_workflow.py  test_data_combination.py  test_essential_attributes.py  test_excel_export.py  test_gui_v4_integration.py  (+8 more)
.github/: PULL_REQUEST_TEMPLATE.md
configs/: .env.example  config_template.json
data/: medical_terms.json
docs/: ACCURATE_TEST_RESULTS.md  API_REFERENCE.md  BUGFIX_FREEZING_AND_DISPLAY.md  DATABASE_SETUP.md  DATABASE_TEST_RESULTS.md  DB_MIGRATION_SUMMARY.md  DEVELOPER_GUIDE.md  ENHANCED_FOLDER_SELECTION.md  EXCEL_EXPORTER_EXTRACTION.md  EXCEL_vs_SQLITE_GUIDE.md  FINAL_IMPLEMENTATION.md  GUI_RENDERING_PATTERN.md  GUI_SIMPLIFICATION_SUMMARY.md  GUI_STATE_REPORT.md  IMPLEMENTATION_GUIDE_SCHEMA_AGNOSTIC.md  IMPLEMENTATION_STATUS.md  INTEGRATION_COMPLETE.md  KEYWORD_NORMALIZATION_SUMMARY.md  PDF_EXTRACTION_FIX_SUCCESS.md  PDF_KEYWORD_EXTRACTOR_QUICK_REF.md  PDF_KEYWORD_EXTRACTOR_SUMMARY.md  PHASE_4_IMPLEMENTATION_PLAN.md  (+13 more)
(+143 files in other folders)
