[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ra-d-ps"
version = "1.0.0"
description = "Radiology XML parsing utilities for medical imaging data analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "RA-D-PS Team"}
]
keywords = ["radiology", "xml", "medical", "imaging", "data-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=1.3.0",
    "openpyxl>=3.0.0",
    "lxml>=4.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]
gui = [
    "tkinter",
]

[project.urls]
Homepage = "https://github.com/luvisaisa/RA-D-PS"
Repository = "https://github.com/luvisaisa/RA-D-PS"
Documentation = "https://github.com/luvisaisa/RA-D-PS/tree/main/docs"

[project.scripts]
ra-d-ps = "ra_d_ps.parser:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
